api_versioned_docs/version-12.0.0-rc1/avalonia/controls/hierarchicalexpandertextcolumncreateoptions-1.mdx
---
title: 'HierarchicalExpanderTextColumnCreateOptions<TModel>'
hide_title: true
slug: '/avalonia/controls/hierarchicalexpandertextcolumncreateoptions-1'
uid: 'Avalonia.Controls.HierarchicalExpanderTextColumnCreateOptions`1'
commentId: 'T:Avalonia.Controls.HierarchicalExpanderTextColumnCreateOptions`1'
docset: 'avalonia-docs'
packageId: 'Avalonia.Controls.TreeDataGrid'
assembly: 'Avalonia.Controls.TreeDataGrid'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls'
tfms:
  - 'net8.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">HierarchicalExpanderTextColumnCreateOptions&lt;TModel&gt; Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Controls</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls.TreeDataGrid</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia.Controls.TreeDataGrid</code>
</div>
</div>

<div className="apiref-page__lead">

Holds options for a hierarchical expander column with an inner text column created via
the WithHierarchicalExpanderTextColumn extension methods on [Avalonia.Controls.TreeDataGridSourceExtensions](xref:Avalonia.Controls.TreeDataGridSourceExtensions).

</div>

<div className="apiref-page__signature">

```csharp
public class HierarchicalExpanderTextColumnCreateOptions<TModel>
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> <a href="columncreateoptions">ColumnCreateOptions</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="textcolumncreateoptions">TextColumnCreateOptions</a> <span className="apiref-page__relation-separator">-&gt;</span> HierarchicalExpanderTextColumnCreateOptions&lt;TModel&gt;
</div>
</div>

## Constructors

| Name | Description |
| --- | --- |
| [HierarchicalExpanderTextColumnCreateOptions&lt;TModel&gt;](#uid-a2a8ac4fad) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-a2a8ac4fad"></span>

### HierarchicalExpanderTextColumnCreateOptions&lt;TModel&gt; Constructor

```csharp
public HierarchicalExpanderTextColumnCreateOptions<TModel>()
```

</section>

## Properties

| Name | Description |
| --- | --- |
| [HasChildren](#uid-227ad2196d) | Gets or sets an expression returning whether a model instance has children. |
| [IsExpanded](#uid-fb4afbe3d0) | Gets or sets an expression returning whether a model instance is expanded. |
| [Culture](textcolumncreateoptions.mdx#uid-8d964fc4cf) | Culture info used in conjunction with [Avalonia.Controls.TextColumnCreateOptions.StringFormat](xref:Avalonia.Controls.TextColumnCreateOptions.StringFormat) Inherited from [TextColumnCreateOptions](textcolumncreateoptions.mdx). |
| [IsReadOnly](textcolumncreateoptions.mdx#uid-e110d12073) | Gets or sets whether the column is read-only. Inherited from [TextColumnCreateOptions](textcolumncreateoptions.mdx). |
| [IsTextSearchEnabled](textcolumncreateoptions.mdx#uid-f10fb2914e) | Gets or sets a value indicating whether the column takes part in text searches. Inherited from [TextColumnCreateOptions](textcolumncreateoptions.mdx). |
| [StringFormat](textcolumncreateoptions.mdx#uid-3b661f0634) | Gets or sets the format string for the cells in the column. Inherited from [TextColumnCreateOptions](textcolumncreateoptions.mdx). |
| [TextAlignment](textcolumncreateoptions.mdx#uid-a923371860) | Gets or sets the text alignment mode for the cells in the column. Inherited from [TextColumnCreateOptions](textcolumncreateoptions.mdx). |
| [TextTrimming](textcolumncreateoptions.mdx#uid-032c3ee539) | Gets or sets the text trimming mode for the cells in the column. Inherited from [TextColumnCreateOptions](textcolumncreateoptions.mdx). |
| [TextWrapping](textcolumncreateoptions.mdx#uid-44607fef93) | Gets or sets the text wrapping mode for the cells in the column. Inherited from [TextColumnCreateOptions](textcolumncreateoptions.mdx). |
| [AllowTriStateSorting](columncreateoptions.mdx#uid-2d3c781356) | Gets or sets whether the user can cycle through ascending, descending, and unsorted states when clicking the column header. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [BeginEditGestures](columncreateoptions.mdx#uid-a7d933d9bd) | Gets or sets the gesture(s) that will cause a cell to enter edit mode. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [CanUserResize](columncreateoptions.mdx#uid-265c20fcbb) | Gets or sets a value indicating whether the user can resize a column by dragging. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [CanUserSortColumn](columncreateoptions.mdx#uid-2cf54f908b) | Gets or sets a value indicating whether the user can sort a column by clicking. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [CompareAscending](columncreateoptions.mdx#uid-5685462157) | Gets or sets a custom comparison for ascending ordered columns. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [CompareDescending](columncreateoptions.mdx#uid-49dcda7052) | Gets or sets a custom comparison for descending ordered columns. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [MaxWidth](columncreateoptions.mdx#uid-4554236b2f) | Gets or sets the maximum width for a column. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [MinWidth](columncreateoptions.mdx#uid-1776db3e6c) | Gets or sets the minimum width for a column. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [Width](columncreateoptions.mdx#uid-3cd08b17fd) | Gets or sets the column width. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-227ad2196d"></span>

### HasChildren Property

Gets or sets an expression returning whether a model instance has children.

```csharp
public System.Linq.Expressions.Expression<Func<TModel,bool>> HasChildren { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-fb4afbe3d0"></span>

### IsExpanded Property

Gets or sets an expression returning whether a model instance is expanded.

```csharp
public System.Linq.Expressions.Expression<Func<TModel,bool>> IsExpanded { get; set; }
```

</section>

</ApiRefPage>

